Fix fetch.py not working

--- a/config.py.example
+++ b/config.py.example
@@ -1,2 +1,3 @@
-GITHUB_REPOSITORY_DISPATCH_URI = "https://api.github.com/repos/:owner/:repo/dispatches"
-ACCESS_TOKEN = ""
+REPOSITORY_OWNER = "username"
+REPOSITORY_NAME = "repo"
+ACCESS_TOKEN = "token"
