Add fully functional fetch.py-script

--- a/config.py.example
+++ b/config.py.example
@@ -1,3 +1,5 @@
-REPOSITORY_OWNER = "username"
+REPOSITORY_OWNER = "name"
 REPOSITORY_NAME = "repo"
-ACCESS_TOKEN = "token"
+WORKFLOW_NAME = "release.yml"
+ACCESS_TOKEN = ""
+EXTRACT_DIRECTORY = "./out"
